Fixed IE8 category page intro z-index issue. fixed slick carousel z-index issue carousel scrolling over top of fixed nav

--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -15,6 +15,7 @@
         position: fixed;
         right: auto;
         top: 0;
+        z-index:999;
     }
 
     .masthead__section {
