--- a/src/public/sass/layout/_ie8.scss
+++ b/src/public/sass/layout/_ie8.scss
@@ -31,4 +31,13 @@
             } 
         }
     }
+
+    .hero {
+        .card {
+            z-index:0;
+        }
+        .slick {
+            z-index:0;
+        }
+    }
 }
